--- a/index.css
+++ b/index.css
@@ -1,19 +1,64 @@
-body{
+html, body, header{
      margin: 0;
+     padding: 0;
      font-family: verdana;
 }
 
-nav{
-     width: 100%;
-     height: 50px;
+.container{
+     margin: 0;
+     padding: 0;
 
-     color: #ffffff;
-     text-align: center;
-
+     width: 100vw;
+     height: 7vh;
+     
      background-color: #D71832;
+     position: absolute;
+
+     display: flex;
+     align-items: center;
+     justify-content: space-around;
+     box-shadow: 3px 5px 5px rgb(0, 0, 0, 0.4);
 }
 
-nav li {
-     display: inline-flex;
-     list-style: none;
+h2{
+     padding: 1em;
+     color: antiquewhite;
+     letter-spacing: 3px;
 }
+
+
+ul li{
+     margin-top: 500px;
+     list-style: none;
+     display: inline-flex;
+     padding: 1em;
+     margin: 0;
+}
+
+.container ul  li ul {
+     display: none;
+     position: absolute;
+}
+
+.container ul  li:hover ul {
+     display: block;
+}
+
+li{
+     cursor: pointer;
+     transition: all .5s ease-in-out;
+     margin: 0.5em;
+     padding: 10px 15px;
+     color: antiquewhite;
+     border-radius: 20px;
+}
+
+li:hover {
+     background-color: rgba(17, 16, 16, 0.521);
+     
+     box-shadow: 3px 5px 5px rgba(255, 255, 255, 0.4);
+}
+
+
+
+
