--- a/index.css
+++ b/index.css
@@ -26,23 +26,21 @@ h2{
      letter-spacing: 3px;
 }
 
-
-ul li{
-     margin-top: 500px;
+.container ul li{
      list-style: none;
-     display: inline-flex;
+     display: inline-block;
      padding: 1em;
      margin: 0;
 }
 
-.container ul  li ul {
+.container ul li ul li {
      display: none;
-     position: absolute;
 }
 
-.container ul  li:hover ul {
+.container ul  li:hover ul li{
      display: block;
 }
+
 
 li{
      cursor: pointer;
