--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ html, body, header{
      margin: 0;
      padding: 0;
      font-family: verdana;
+     box-sizing:border-box;
 }
 
 .container{
@@ -37,7 +38,7 @@ h2{
      display: none;
 }
 
-.container ul  li:hover ul li{
+.container li:hover>ul li{
      display: block;
 }
 
@@ -56,7 +57,4 @@ li:hover {
      
      box-shadow: 3px 5px 5px rgba(255, 255, 255, 0.4);
 }
-
-
-
 
