--- a/index.css
+++ b/index.css
@@ -68,7 +68,7 @@ nav li> ul{
      background-color: rgb(0, 0, 0, 0.4);
      border-radius: 0% 25% 10% 15%;
 
-     top: 5vh;
+     top: 100%;
      left: 30%;
 
      
