--- a/index.css
+++ b/index.css
@@ -27,6 +27,10 @@ h2{
      letter-spacing: 3px;
 }
 
+a{
+     color: antiquewhite;
+     text-decoration: none;
+}
 
 /*? Estilo para el navegador */
 li{
@@ -45,7 +49,6 @@ li:hover {
      box-shadow: 3px 5px 5px rgba(255, 255, 255, 0.4);
 }
  
-
 
 
 nav li{
@@ -90,4 +93,8 @@ nav li:hover>ul{
 
 img{
      image-rendering: crisp-edges;
+}
+
+h2{
+     color: black;
 }
